syntax = "proto3";

option go_package = "github.com/linuxsuren/api-testing/pkg/testing/remote";

package remote;

service Loader {
    rpc ListTestSuite(Empty) returns (TestSuites) {}
    rpc CreateTestSuite(TestSuite) returns (Empty) {}
    rpc GetTestSuite(TestSuite) returns (TestSuite) {}
    rpc UpdateTestSuite(TestSuite) returns (TestSuite) {}
    rpc DeleteTestSuite(TestSuite) returns (Empty) {}

    rpc ListTestCases(TestSuite) returns (TestCases) {}
    rpc CreateTestCase(TestCase) returns (Empty) {}
    rpc GetTestCase(TestCase) returns (TestCase) {}
    rpc UpdateTestCase(TestCase) returns (TestCase) {}
    rpc DeleteTestCase(TestCase) returns (Empty) {}
}

message TestSuites {
    repeated TestSuite data = 1;
}

message TestSuite {
    string name = 1;
    string api = 2;
}

message TestCases {
    repeated TestCase data = 1;
}

message TestCase {
    string name = 1;
    string suiteName = 2;
    Request request = 3;
    Response response = 4;
}

message Request {
  string api = 1;
  string method = 2;
  repeated Pair header = 3;
  repeated Pair query = 4;
  repeated Pair form = 5;
  string body = 6;
}

message Response {
  int32 statusCode = 1;
  string body = 2;
  repeated Pair header = 3;
  repeated Pair bodyFieldsExpect = 4;
  repeated string verify = 5;
  string schema = 6;
}

message Pair {
  string key = 1;
  string value = 2;
}

message Empty {
}
