syntax = "proto3";

option go_package = "github.com/linuxsuren/api-testing/pkg/runner/monitor";

package monitor;

service Monitor {
    rpc GetResourceUsage(Target) returns (ResourceUsage) {}
}

message ResourceUsage {
    uint64 memory = 1;
    uint64 cpu = 2;
}

message Target {
    string name = 1;
}
